syntax = "proto3";

package pb;

option go_package = "github.com/StephenButtolph/canoto/internal/proto/pb";

message Scalars {
  int32 int32 = 1;
  int64 int64 = 2;
  uint32 uint32 = 3;
  uint64 uint64 = 4;
  sint32 sint32 = 5;
  sint64 sint64 = 6;
  fixed32 fixed32 = 7;
  fixed64 fixed64 = 8;
  sfixed32 sfixed32 = 9;
  sfixed64 sfixed64 = 10;
  bool bool = 11;
  string string = 12;
  bytes bytes = 13;
  LargestFieldNumber largest_field_number = 14;

  repeated int32 repeated_int32 = 15;
  repeated int64 repeated_int64 = 16;
  repeated uint32 repeated_uint32 = 17;
  repeated uint64 repeated_uint64 = 18;
  repeated sint32 repeated_sint32 = 19;
  repeated sint64 repeated_sint64 = 20;
  repeated fixed32 repeated_fixed32 = 21;
  repeated fixed64 repeated_fixed64 = 22;
  repeated sfixed32 repeated_sfixed32 = 23;
  repeated sfixed64 repeated_sfixed64 = 24;
  repeated bool repeated_bool = 25;
  repeated string repeated_string = 26;
  repeated bytes repeated_bytes = 27;
  repeated LargestFieldNumber repeated_largest_field_number = 28;
}

message LargestFieldNumber {
  int32 int32 = 536870911;
}
